Fixed some layout bugs for mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -231,39 +231,39 @@ body {
     }
 
     .wrapper {
-      @apply w-7xl 2xl:w-[100rem] h-[50vh] lg:h-screen relative;
+      @apply w-full lg:w-7xl 2xl:w-[100rem] h-[50vh] lg:h-screen relative;
 
       img {
-        @apply max-w-40 lg:max-w-[27rem] 2xl:max-w-[35rem] object-cover object-center;
+        @apply max-w-28 lg:max-w-[27rem] 2xl:max-w-[35rem] object-cover object-center;
       }
 
-      .p1 {
-        @apply absolute bottom-1/2 left-[23%] z-[1] max-sm:left-[33%];
-      }
+     .p1 {
+  @apply absolute bottom-1/2 left-[23%] z-[1] max-sm:left-[10%];
+}
 
-      .p2 {
-        @apply absolute bottom-[40%] right-[17%] z-[3] max-sm:right-[37%];
-      }
+.p2 {
+  @apply absolute bottom-[50%] right-[17%] z-[3] max-sm:right-[10%];
+}
 
-      .p3 {
-        @apply absolute bottom-1/4 right-[15%] z-[2] max-sm:right-[35%];
-      }
+.p3 {
+  @apply absolute bottom-[20%] right-[15%] z-[2] max-sm:right-[4%];
+}
 
-      .p4 {
-        @apply absolute bottom-[15%] right-[10%] z-[1] max-sm:right-[30%];
-      }
+.p4 {
+  @apply absolute bottom-[-9%] right-[10%] z-[1] max-sm:right-[10%];
+}
 
-      .p5 {
-        @apply absolute bottom-[20%] left-1/2 -translate-x-1/2 scale-150;
-      }
+.p5 {
+  @apply absolute bottom-[20%] left-1/2 -translate-x-1/2 scale-150;
+}
 
-      .p6 {
-        @apply absolute bottom-1/4 left-1/4 z-[2] max-sm:left-[35%];
-      }
+.p6 {
+  @apply absolute bottom-[20%] left-1/4 z-[2] max-sm:left-[4%];
+}
 
-      .p7 {
-        @apply absolute bottom-[5%] left-[15%] z-[3] max-sm:left-[35%];
-      }
+.p7 {
+  @apply absolute bottom-[-9%] left-[15%] z-[3] max-sm:left-[10%];
+}
     }
 
     .content {
@@ -283,7 +283,7 @@ body {
     }
 
     #f-canvas {
-      @apply !w-full !h-dvh relative z-40;
+      @apply !w-full !h-dvh relative z-10;
     }
 
     .box {
